# naivecoin-rs

./: .gitignore  Cargo.toml  README.md
src/: block.rs  chain.rs  crypto.rs  difficulter.rs  http_server.rs  lib.rs  main.rs  message.rs  p2p.rs  p2p_handler.rs  transaction.rs  transaction_pool.rs  validator.rs  wallet.rs
src/difficulter/: mod.rs  simple.rs
src/validator/: mod.rs  pos.rs  pow.rs
tests/: all.rs
