[package]
name = "naivecoin-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0.126", features = ["derive"] }
serde_json = "1.0.64" # custom serialization
sha2 = "0.9.5"
once_cell = "1.12.0"
byteorder = "1.4.3"
log = "0.4.17"
mio = { version="0.8.4", features = ["net", "os-poll"] }
env_logger = "0.9.0"
rouille = "3.5.0"

[profile.release]
debug = true
