[package]
name = "naivecoin-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0.126", features = ["derive"] }
serde_json = "1.0.64" # todo: custom serialization
sha2 = "0.9.5"
once_cell = "1.12.0"
log = "0.4.17"
mio = { version="0.8.4", features = ["net", "os-poll"] }
env_logger = "0.9.0"
rouille = {version = "3.5.0", default_features = false} # todo: even simple http server
rand_core = "0.6.3"
openssl = "0.10"
hex = "0.4.3"

[dev-dependencies]
tempfile = "3.3.0"
reqwest = {version = "0.11.11", default_features = false}
tokio = { version = "1.20.1", features = ["macros"] }

# [profile.release]
# debug = true
